# hmp-client

./: .pre-commit-config.yaml  README.md  README.rst  mypy.ini  pyproject.toml
.github/templates/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: CI-CD.md  domain.md  entities.md
docs/diagrams/: 07_data-flow.d2  07_read-access.d2  07_use-case.d2  07_write-access.d2  08_audit-data-flow.d2
docs/reports/: 07_security-policy.typ  08_audit.typ  README.md  conf.typ  is06_info-sec.typ  pw01_initial-research.md  pw05_load-testing-strategy.md
hearmypaper/: CHANGELOG  pyproject.toml
hearmypaper/src/hearmypaper/: app.py
hearmypaper/src/hearmypaper/services/: api_client.py  auth_service.py  credentials_repo.py
hearmypaper/src/hearmypaper/ui/: login_screen.py  register_screen.py
hearmypaper/src/hearmypaper/utils/: navigator.py
src/hearmypaper/: __main__.py  app.py
src/hearmypaper/audit/: api.py  dto.py  service.py
src/hearmypaper/audit/ui/: audit_screen.py  catalog.py  export_form.py  resource_catalog.py
src/hearmypaper/auth/: api.py  client.py  dto.py  enums.py  service.py  utils.py
src/hearmypaper/auth/ui/: login_screen.py
src/hearmypaper/pdf_to_audio/: api.py  crypto.py  service.py
src/hearmypaper/pdf_to_audio/ui/: form.py  pdf_to_audio_form.py
src/hearmypaper/project/: api.py  dto.py  service.py
src/hearmypaper/project/ui/: __init__.py  catalog.py  create_form.py  info.py  manage_students_form.py  update_form.py
src/hearmypaper/resources/: config.toml  server.key
src/hearmypaper/services/: api_client.py  auth_service.py  credentials_repo.py
src/hearmypaper/shared/ui/: catalog_screen.py  form_screen.py  item_info_screen.py  resource_catalog.py
src/hearmypaper/shared/ui/components/: datetime_picker.py
src/hearmypaper/shared/utils/: api.py  navigator.py  session.py
src/hearmypaper/submission/: api.py  crypto.py  dto.py  service.py
src/hearmypaper/submission/ui/: catalog.py  convert_form.py  download.py  info.py  open_form.py  upload_form.py
src/hearmypaper/submissions/: api.py  service.py
src/hearmypaper/submissions/ui/: catalog.py  download_form.py  info.py  upload_file.py
src/hearmypaper/ui/: register_screen.py
src/hearmypaper/user/: api.py  dto.py  service.py
src/hearmypaper/user/ui/: __init__.py  catalog.py  create_form.py  info.py  update_form.py
src/hearmypaper/utils/: navigator.py
